--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<p style="line-height: 30px;">我的收藏 E族之家手机版 </p>
 			<p>
 				<span>
-					<img src="img/qq.jpg">328203328
+					<img src="qq.jpg">328203328
 				</span>	
 			</p>
 			<p style="float: right; line-height: 30px;">扫描加入 欢迎来到E族之家
@@ -20,11 +20,11 @@
 			</p>
 		</div>
 	<div class="head">
-		<img src="img/logo1.png">
+		<img src="logo1.png">
 		<input type="text" name="" value="请输入关键词!">
 		<a href="#" class="c">搜索</a>			
 		<div class="gouwuche">
-			<img src="img/购物车.png">
+			<img src="购物车.png">
 			<p>)件</p>
 			<p style="color: red;">0</p>
 			<p>购物车(</p>
@@ -44,7 +44,7 @@
 			<div class="body-box">
 				<div class="left">
 					<div class="left-top">
-						<img src="img/sort.png">
+						<img src="sort.png">
 						<p style="float:right; padding-right: 70px; line-height: 45px;">全部分类</p>
 					</div>
 					<div class="left-bottom">
@@ -57,56 +57,56 @@
 				<div class="right"> 
 					<ul>
 						<li>
-							<img src="img/辣椒.png" style="padding-left: 60px; padding-top: 25px;">
+							<img src="辣椒.png" style="padding-left: 60px; padding-top: 25px;">
 							<p style="color: #d1d1d1;">精品辣椒100g</p>
     						<p>
     							<span>￥90.00</span>
     						</p>
 						</li>
 						<li>
-							<img src="img/百香果.png" style="padding-left:42px; padding-top:27px; ">
+							<img src="百香果.png" style="padding-left:42px; padding-top:27px; ">
 							<p style="color: #d1d1d1;">特级百香果3斤</p>
     						<p>
     							<span>￥90.00</span>
     						</p>
 						</li>
 						<li>
-							<img src="img/酒.png" style="padding-left: 95px; padding-top: 11px; ">
+							<img src="酒.png" style="padding-left: 95px; padding-top: 11px; ">
 							<p style="color: #d1d1d1;">万威啤酒500ml</p>
     						<p>
     							<span>￥90.00</span>
     						</p>
 						</li>
 						<li>
-							<img src="img/松子.png" style="padding-left: 35px; padding-top: 10px; ">
+							<img src="松子.png" style="padding-left: 35px; padding-top: 10px; ">
 							<p style="color: #d1d1d1;">万威啤酒500ml</p>
     						<p>
     							<span>￥90.00</span>
     						</p>
 						</li>
 						<li>
-							<img src="img/辣椒.png" style="padding-left: 60px; padding-top: 25px;">
+							<img src="辣椒.png" style="padding-left: 60px; padding-top: 25px;">
 							<p style="color: #d1d1d1;">精品辣椒100g</p>
     						<p>
     							<span>￥90.00</span>
     						</p>
 						</li>
 						<li>
-							<img src="img/百香果.png" style="padding-left:42px; padding-top:27px; ">
+							<img src="百香果.png" style="padding-left:42px; padding-top:27px; ">
 							<p style="color: #d1d1d1;">特级百香果3斤</p>
     						<p>
     							<span>￥90.00</span>
     						</p>
 						</li>
 						<li>
-							<img src="img/酒.png" style="padding-left: 95px; padding-top: 11px; ">
+							<img src="酒.png" style="padding-left: 95px; padding-top: 11px; ">
 							<p style="color: #d1d1d1;">万威啤酒500ml</p>
     						<p>
     							<span>￥90.00</span>
     						</p>
 						</li>
 						<li>
-							<img src="img/松子.png" style="padding-left: 35px; padding-top: 10px; ">
+							<img src="松子.png" style="padding-left: 35px; padding-top: 10px; ">
 							<p style="color: #d1d1d1;">万威啤酒500ml</p>
     						<p>
     							<span>￥90.00</span>
